# Image_Processing_100q_hrn

./: CMakeLists.txt
src/: q10_median_filter.cpp  q11_mean_filter.cpp  q12_motion_filter.cpp  q13_max_min_filter.cpp  q14_differential_filter.cpp  q15_sobel_filter.cpp  q16_prewitt_filter.cpp  q17_laplacian_filter.cpp  q18_emboss_filter.cpp  q19_LoG_filter.cpp  q1_exchange_channel.cpp  q20_histogram.py  q21_histogram_normalization.cpp  q22_histogram_measure.cpp  q2_Grayscale.cpp  q3_Thresholding.cpp  q4_otsu_method.cpp  q5_BGR2HSV.cpp  q6_color_reduction.cpp  q7_average_pooling.cpp  q8_max_pooling.cpp  q9_gaussian_filter.cpp
